--- a/wp-content/themes/fortuna/style.css
+++ b/wp-content/themes/fortuna/style.css
@@ -1825,7 +1825,7 @@ header.transparent_header .custom_menu_5 #menu > ul > li:hover > a {
 }
 .custom_menu_5 #menu > ul > li ul > li > a {
     border-bottom: 1px solid rgba(255,255,255,0.08);
-	background: url(/wp-content/themes/fortuna/images/grad.png) center top repeat-x;
+	background: url(./images/grad.png) center top repeat-x;
 	color: #fff;   
 }
 .custom_menu_5 #menu > ul > li ul > li > a:hover {
@@ -1896,7 +1896,7 @@ header.transparent_header .custom_menu_6 #menu > ul > li:not(.boc_nav_button):ho
 }
 .custom_menu_6 #menu > ul > li ul > li > a {
     border-bottom: 1px solid rgba(0, 0, 0, 0.07);
-	background: url(/wp-content/themes/fortuna/images/grad.png) center top repeat-x;
+	background: url(./images/grad.png) center top repeat-x;
 	color: #333;
 }
 .custom_menu_6 #menu > ul > li ul > li > a:hover {
@@ -2362,7 +2362,7 @@ header.transparent_header .custom_menu_6 #menu > ul > li:not(.boc_nav_button):ho
 }
 
 .page_title_bgr.bgr_style1 .full_container_page_title {
-	background: #fafafa url('/wp-content/themes/fortuna/images/page_head_bgr1.png') top center;
+	background: #fafafa url('./images/page_head_bgr1.png') top center;
 }
 
 .page_title_bgr .full_container_page_title .page_heading {
@@ -2452,19 +2452,19 @@ header.transparent_header .custom_menu_6 #menu > ul > li:not(.boc_nav_button):ho
 	padding: 0 0 0 12px;
 }
 .boc_heading.bgr_diagonal {
-	background: url('/wp-content/themes/fortuna/images/heading_diagonal.png') repeat-x 0 80%;
+	background: url('./images/heading_diagonal.png') repeat-x 0 80%;
 }
 .boc_heading.bgr_dotted {
-	background: url('/wp-content/themes/fortuna/images/heading_dots.png') repeat-x left 80%;
+	background: url('./images/heading_dots.png') repeat-x left 80%;
 }
 .boc_heading.bgr_multidotted {
-	background: url('/wp-content/themes/fortuna/images/heading_multidots.png') repeat-x left 80%;
+	background: url('./images/heading_multidots.png') repeat-x left 80%;
 }
 .boc_heading.bgr_single {
-	background: url('/wp-content/themes/fortuna/images/heading_line.png') repeat-x left 80%;
+	background: url('./images/heading_line.png') repeat-x left 80%;
 }
 .boc_heading.bgr_double {
-	background: url('/wp-content/themes/fortuna/images/heading_2_lines.png') repeat-x left 80%;
+	background: url('./images/heading_2_lines.png') repeat-x left 80%;
 }
 
 
@@ -2673,7 +2673,7 @@ input[type="search"]::-webkit-search-results-decoration { display: none; }
 	width: 100%;
 	padding: 7px 30px 7px 10px;
 	float: none;
-	background: url('/wp-content/themes/fortuna/images/button_search.png') 97% center no-repeat;
+	background: url('./images/button_search.png') 97% center no-repeat;
 }
 
 .page_title_bgr #sidebar #s {
@@ -2899,7 +2899,7 @@ input[type="search"]::-webkit-search-results-decoration { display: none; }
   top: 50%;
   margin-left: -40px;
   margin-top: -40px;
-/*  background: url("/wp-content/themes/fortuna/owl.video.play.png") no-repeat;*/
+/*  background: url("./owl.video.play.png") no-repeat;*/
   cursor: pointer;
   z-index: 1;
   -webkit-backface-visibility: hidden;
@@ -4095,7 +4095,7 @@ a .img_overlay .hover_icon{
 	font-size: 26px;
 }
 a .img_overlay .hover_icon.icon_plus{	
-	background-image: url(/wp-content/themes/fortuna/images/icon_plus.png);
+	background-image: url(./images/icon_plus.png);
 	background-position: center center;
 	background-repeat: no-repeat;
 }
@@ -4420,7 +4420,7 @@ a .pic_info.type1 .info_overlay_padding {
 }
 
 a .pic_info.type1 .plus_overlay_icon {
-	background: url(/wp-content/themes/fortuna/images/icon_plus_white.png) 0 0 no-repeat;
+	background: url(./images/icon_plus_white.png) 0 0 no-repeat;
 	width: 13px;
 	height: 13px;
 	bottom: 9px;
@@ -4615,7 +4615,7 @@ a:hover .pic_info.type2 .img_overlay_icon .portfolio_icon{
 
 
 a .pic_info.type2 .plus_overlay_icon {
-	background: url(/wp-content/themes/fortuna/images/icon_plus_white.png) 0 0 no-repeat;
+	background: url(./images/icon_plus_white.png) 0 0 no-repeat;
 	width: 13px;
 	height: 13px;
 	bottom: 9px;
@@ -4955,7 +4955,7 @@ a .pic_info.type6 .info_overlay_padding {
 }
 
 a .pic_info.type6 .plus_overlay_icon {
-	background: url(/wp-content/themes/fortuna/images/icon_plus_white.png) 0 0 no-repeat;
+	background: url(./images/icon_plus_white.png) 0 0 no-repeat;
 	width: 13px;
 	height: 13px;
 	bottom: 9px;
@@ -5426,7 +5426,7 @@ a .pic_info.type11 .info_overlay_padding {
 }
 
 a .pic_info.type11 .plus_overlay_icon {
-	background: url(/wp-content/themes/fortuna/images/icon_plus_white.png) 0 0 no-repeat;
+	background: url(./images/icon_plus_white.png) 0 0 no-repeat;
 	width: 13px;
 	height: 13px;
 	bottom: 9px;
@@ -5885,7 +5885,7 @@ a:hover .pic_info.type14 .info_overlay p {
 
 a .boc_image_box .pic_info.type13 .img_overlay_icon .portfolio_icon {
     background-color: none;
-	background: url(/wp-content/themes/fortuna/images/icon_plus_big.png) center center no-repeat;
+	background: url(./images/icon_plus_big.png) center center no-repeat;
 	margin-top: -20px;
 	transform: scale(0);
     -webkit-transform: scale(0);
@@ -5971,22 +5971,22 @@ a:hover .boc_image_box .pic_info.type13 .img_overlay_icon .portfolio_icon {
 
 
 .icon_gallery{
-	background: url(/wp-content/themes/fortuna/images/gallery.png) center center no-repeat;
+	background: url(./images/gallery.png) center center no-repeat;
 }
 .icon_image{
-	background: url(/wp-content/themes/fortuna/images/image.png) center center no-repeat;
+	background: url(./images/image.png) center center no-repeat;
 }
 .icon_camera{
-	background: url(/wp-content/themes/fortuna/images/camera.png) center center no-repeat;
+	background: url(./images/camera.png) center center no-repeat;
 }
 .icon_portfolio{
-	background: url(/wp-content/themes/fortuna/images/portfolio.png) center center no-repeat;
+	background: url(./images/portfolio.png) center center no-repeat;
 }
 .icon_video{
-	background: url(/wp-content/themes/fortuna/images/video.png) center center no-repeat;
+	background: url(./images/video.png) center center no-repeat;
 }
 .icon_link{	
-	background: url(/wp-content/themes/fortuna/images/icon_plus.png) center center no-repeat;
+	background: url(./images/icon_plus.png) center center no-repeat;
 }
 
 
@@ -6696,7 +6696,7 @@ a:hover .boc_image_box .pic_info.type13 .img_overlay_icon .portfolio_icon {
 .tipsy { padding: 4px; font-size: 13px; line-height: 18px; position: absolute; z-index: 100000;}
 .tipsy-inner { padding: 7px 12px; background-color: rgba(0,0,0,0.8); color: white; max-width: 200px; text-align: center; }
 .tipsy-inner { border-radius: 3px; -moz-border-radius:3px; -webkit-border-radius:3px; }
-.tipsy-arrow { position: absolute; background: url('/wp-content/themes/fortuna/images/tipsy.png') no-repeat top left; width: 9px; height: 4px; }
+.tipsy-arrow { position: absolute; background: url('./images/tipsy.png') no-repeat top left; width: 9px; height: 4px; }
 .tipsy-n .tipsy-arrow { top: 0; left: 50%; margin-left: -4px; }
 .tipsy-nw .tipsy-arrow { top: 0; left: 10px; }
 .tipsy-ne .tipsy-arrow { top: 0; right: 10px; }
@@ -6736,7 +6736,7 @@ a:hover .boc_image_box .pic_info.type13 .img_overlay_icon .portfolio_icon {
 }
 
 .testimonial_style_small .quote_content {
-	background: #f8f8f8 url('/wp-content/themes/fortuna/images/quote.png') 14px 14px no-repeat;
+	background: #f8f8f8 url('./images/quote.png') 14px 14px no-repeat;
 	border: 1px solid #e5e5e5;
 	position:relative;
 	-moz-border-radius: 6px;
@@ -6771,7 +6771,7 @@ a:hover .boc_image_box .pic_info.type13 .img_overlay_icon .portfolio_icon {
 	position: absolute;
 	bottom: -12px;
 	left: 47px;	
-	background:url('/wp-content/themes/fortuna/images/quote_arrow.png') 0px 0px no-repeat;
+	background:url('./images/quote_arrow.png') 0px 0px no-repeat;
 }
 
 .testimonial_style_small.is_2d .quote_arrow {
@@ -7328,7 +7328,7 @@ h2.resp-accordion span.icon {
 }
 .acc_control {
 	float: left;
-	background: #08ada7 url('/wp-content/themes/fortuna/images/acc_bgr.png') center -17px no-repeat;
+	background: #08ada7 url('./images/acc_bgr.png') center -17px no-repeat;
 	width: 20px;
 	height: 20px;
 	margin: 2px 0 0;
@@ -7371,7 +7371,7 @@ h2.resp-accordion span.icon {
 }
 
 .active_acc .acc_control {
-	background: #888 url('/wp-content/themes/fortuna/images/acc_bgr.png') center 1px no-repeat;	
+	background: #888 url('./images/acc_bgr.png') center 1px no-repeat;	
 }
 .acc_holder.with_bgr .active_acc .acc_control{
 	background-color: #08ada7;
@@ -7797,19 +7797,19 @@ a:hover .link_span:before{
 	
 .calendar_date {
 	margin-right: 8px;
-	background: url('/wp-content/themes/fortuna/images/blog_icon_date.png') 0px 1px no-repeat;
+	background: url('./images/blog_icon_date.png') 0px 1px no-repeat;
 	padding: 0 12px 0 22px;
 	border-right: 1px solid #ddd;
 }	
 span.author {
 	margin-right: 8px;
-	background: url('/wp-content/themes/fortuna/images/blog_icon_author.png') 0px 1px no-repeat;
+	background: url('./images/blog_icon_author.png') 0px 1px no-repeat;
 	padding: 0 12px 0 22px;
 	border-right: 1px solid #ddd;
 }	
 .comments {
 	margin-right: 8px;
-	background: url('/wp-content/themes/fortuna/images/blog_icon_comments.png') 0px 1px no-repeat;
+	background: url('./images/blog_icon_comments.png') 0px 1px no-repeat;
 	padding: 0 12px 0 23px;
 	border-right: 1px solid #ddd;
 }	
@@ -7823,7 +7823,7 @@ span.author {
 
 .tags {
 	margin-right: 8px;
-	background: url('/wp-content/themes/fortuna/images/blog_icon_tags.png') 0px 0px no-repeat;
+	background: url('./images/blog_icon_tags.png') 0px 0px no-repeat;
 	padding: 0 12px 0 23px;
 }	
 
@@ -7940,7 +7940,7 @@ span.author {
 
 .meta_date {
 	font-size: 12px;
-	background: url('/wp-content/themes/fortuna/images/blog_icon_date.png') 0px 1px no-repeat;
+	background: url('./images/blog_icon_date.png') 0px 1px no-repeat;
 	padding: 0 0px 0 24px;
 	line-height: 18px;
 	margin: 0 0 10px 0;
